--- a/storybook/package.json
+++ b/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loft-ui-storybook",
+  "name": "@loft-ui/storybook",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -14,7 +14,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -48,6 +49,8 @@
     "postcss-loader": "^3.0.0",
     "react-snap": "^1.23.0",
     "sass-loader": "^8.0.2",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
     "style-loader": "^1.1.3",
     "stylelint-config-standard": "^20.0.0",
     "svg-url-loader": "^5.0.0",
