--- a/storybook/package.json
+++ b/storybook/package.json
@@ -8,6 +8,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "prism-svelte": "^0.4.7",
     "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
