--- a/storybook/package.json
+++ b/storybook/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1",
     "svelte": "^3.31.0",
     "svelte-routing": "^1.5.0",
     "vue": "^2.6.12",
