add vue collapse

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "velocity-animate": "^1.5.2"
+  }
 }
