--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1"
   }
 }
