--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -3,5 +3,11 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "svelte": ">= 3.0.0"
+  },
+  "dependencies": {
+    "svelte-routing": "^1.5.0"
+  }
 }
