--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "license": "MIT",
+  "peerDependencies": {
+    "vue": ">= 2.0.0"
+  },
   "dependencies": {
-    "velocity-animate": "^1.5.2"
+    "velocity-animate": "^1.5.2",
+    "vue-router": "^3.4.9"
   }
 }
