--- a/storybook/package.json
+++ b/storybook/package.json
@@ -9,8 +9,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "portal-vue": "^2.1.7",
     "prism-svelte": "^0.4.7",
-    "prismjs": "^1.22.0"
+    "prismjs": "^1.22.0",
+    "react": "^17.0.2",
+    "svelte": "^3.38.3",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
