--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "src": "/.*", "dest": "./storybook/build/index.html" }
   ]
 }
