--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "./storybook/build/index.html" }
-  ]
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
